Fix burger menu on mobile
Fix burger menu on mobile

--- a/sass/components/_heros.scss
+++ b/sass/components/_heros.scss
@@ -2,7 +2,7 @@
 
 .bg-hero {
     position: relative;
-    height: calc(100vh - 6rem);
+    height: calc(100dvh - 6rem); 
     overflow: hidden;
     background-color: black;
     background-size: cover;
