--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -186,6 +186,7 @@
                 img {
                     height: fit-content;
                     max-height: 100%;
+                    width: 100%;
                 }
             }
 
